--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start $PORT"
+    "start": "next start -p $PORT"
   },
   "dependencies": {
     "@storyblok/storyblok-editable": "^1.0.0",
